--- a/package.json
+++ b/package.json
@@ -10,9 +10,21 @@
   },
   "dependencies": {
     "@next/font": "13.1.1",
+    "@tailwindcss/forms": "^0.5.3",
+    "@tailwindcss/typography": "^0.5.8",
+    "classnames": "^2.3.2",
+    "framer-motion": "^8.0.2",
+    "jotai": "^1.12.0",
     "next": "13.1.1",
+    "next-themes": "^0.2.1",
+    "overlayscrollbars": "^2.0.2",
+    "overlayscrollbars-react": "^0.5.0",
     "react": "18.2.0",
-    "react-dom": "18.2.0"
+    "react-dom": "18.2.0",
+    "react-icons": "^4.7.1",
+    "react-use": "^17.4.0",
+    "recharts": "^2.2.0",
+    "swiper": "^8.4.5"
   },
   "devDependencies": {
     "autoprefixer": "^10.4.13",
